--- a/client/package.json
+++ b/client/package.json
@@ -40,5 +40,9 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:5000"
+  "proxy": "http://localhost:5000",
+  "devDependencies": {
+    "@iconify/icons-bx": "^1.0.3",
+    "@iconify/react": "^1.1.3"
+  }
 }
