--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "node-sass": "^4.14.1",
     "node-uuid": "^1.4.8",
     "react": "^16.13.1",
+    "react-data-table-component": "^6.9.3",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
@@ -43,6 +44,7 @@
   "proxy": "http://localhost:5000",
   "devDependencies": {
     "@iconify/icons-bx": "^1.0.3",
+    "@iconify/icons-fa-regular": "^1.0.6",
     "@iconify/react": "^1.1.3"
   }
 }
